--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "node" : "14.x",
+ 
+
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    
+      "node": "14.x"
+    
+  
   },
   "keywords": [],
   "author": "archu",
@@ -22,3 +29,4 @@
     "twilio": "^3.71.3"
   }
 }
+
