--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
-    
-  },
+    },
+    "engines": {
+      "node": "14.17.x",
+      "npm": "6.14.x"
+    },
+ 
   
   "keywords": [],
   "author": "archu",
