--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dev": "nodemon index.js"
     },
     "engines": {
-      "node": "14.17.x",
-      "npm": "6.14.x"
+      "node": "14.x"
+      
     },
  
   
